--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,7 +168,7 @@ p {
   display: block;
   border: solid 1px #e6b33e;
   border-radius: 5px;
-  padding: 1% 15% 1% 1%;
+  padding: 4% 25% 4% 1%;
   background-color: #d6d0c8;
   margin: auto auto 3% auto;
 }
@@ -273,16 +273,28 @@ label {
   font-family: Roboto, sans-serif;
   text-transform: uppercase;
   color: #d6d0c8;
-  margin: 29%;
 }
 
 .personal-information {
-  margin: 2% 30% 0 30%;
+  width: 50%;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  grid-auto-flow: column;
+  grid-template-rows: auto auto auto auto auto auto;
+  padding: 2% 3% 2% 0;
+  margin: 2% auto;
 }
 
 .banking-details {
-  margin: 2% 20% 2% 20%;
+  width: 50%;
   display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  grid-auto-flow: column;
+  grid-template-rows: auto auto auto auto auto auto;
+  padding: 2% 3% 2% 0;
+  margin: 2% auto;
 }
 
 #newsletter {
@@ -315,4 +327,9 @@ label {
   align-items: baseline;
   justify-content: center;
   margin: 5% 0 0 0;
+}
+
+.grid-h1 {
+  grid-column: 1 / 3;
+  align-self: center;
 }
