--- a/styles/styles.css
+++ b/styles/styles.css
@@ -280,9 +280,8 @@ label {
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;
-  grid-auto-flow: column;
   grid-template-rows: auto auto auto auto auto auto;
-  padding: 2% 3% 2% 0;
+  padding: 2% 0;
   margin: 2% auto;
 }
 
