--- a/styles/styles.css
+++ b/styles/styles.css
@@ -306,6 +306,7 @@ label {
 .newsletter-section {
   display: flex;
   align-items: stretch;
+  margin: 100%;
 }
 
 .circle {
@@ -325,7 +326,7 @@ label {
   display: flex;
   align-items: baseline;
   justify-content: center;
-  margin: 5% 0 0 0;
+  margin: 3% 0 0 0;
 }
 
 .grid-h1 {
