--- a/styles/styles.css
+++ b/styles/styles.css
@@ -296,7 +296,7 @@ label {
   margin: 2% auto;
 }
 
-#newsletter {
+.newsletter {
   background-color: #d6d0c8;
   border: solid 1px #a27201;
   border-radius: 2px;
@@ -307,6 +307,7 @@ label {
   display: flex;
   align-items: stretch;
   width: 100%;
+  justify-content: center;
 }
 
 .circle {
