--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,9 +168,11 @@ p {
   display: block;
   border: solid 1px #e6b33e;
   border-radius: 5px;
-  padding: 4% 25% 4% 1%;
+  padding: 1%;
   background-color: #d6d0c8;
   margin: auto auto 3% auto;
+  height: 50%;
+  width: 140%;
 }
 
 .content-wrap {
