--- a/styles/styles.css
+++ b/styles/styles.css
@@ -346,3 +346,13 @@ label {
   grid-column: 1 / 3;
   align-self: center;
 }
+
+.check-icon-big {
+  font-size: 8em;
+  color: #e6b33e;
+}
+
+.success-section {
+  border: solid #a27201 1px;
+  border-radius: 10px;
+}
