--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,75 @@
+/* General */
+
 body {
   font-family: Montserrat, Helvetica, sans-serif;
   margin: 0;
   background-color: #373736;
   background: cover;
 }
+
+main {
+  background-color: #373736;
+  background: cover;
+  font-family: Montserrat, Helvetica, sans-serif;
+}
+
+h1 {
+  font-family: Montserrat, Helvetica, sans-serif;
+  color: #e6b33e;
+  font-size: 3em;
+  text-align: center;
+  font-weight: 100;
+}
+
+h2 {
+  font-family: Montserrat, sans-serif;
+  color: #d6d0c8;
+}
+
+h3 {
+  font-family: Montserrat, sans-serif;
+  color: #d6d0c8;
+}
+
+p {
+  font-family: Roboto, sans-serif;
+  color: #d6d0c8;
+}
+
+.hydralink {
+  text-decoration: underline;
+  color: #3e73e6;
+}
+
+.hydralink:hover {
+  color: #d6d0c8;
+}
+
+.content-wrap {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.button1 {
+  padding: 8px;
+  border-radius: 5px;
+  background-color: #a27201;
+  font-family: sans-serif;
+  border: solid #a27201;
+  color: #d6d0c8;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+.button1:hover {
+  background-color: #373736;
+  border: solid #a27201;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+/*Header*/
 
 header {
   width: 100%;
@@ -43,6 +109,8 @@ header .logo2 {
   margin: 0 auto;
 }
 
+/* Navigation */
+
 .navbar {
   overflow: hidden;
   background-color: #1b1b1b;
@@ -74,67 +142,10 @@ nav a:hover {
   font-weight: 500;
 }
 
-main {
-  background-color: #373736;
-  background: cover;
-  font-family: Montserrat, Helvetica, sans-serif;
-}
-
-h1 {
-  font-family: Montserrat, Helvetica, sans-serif;
-  color: #e6b33e;
-  font-size: 3em;
-  text-align: center;
-  font-weight: 100;
-}
+/* Producers */
 
 .h1-producers {
   margin-top: 5px;
-}
-
-.h1-create-account {
-  margin-top: 5%;
-}
-
-h2 {
-  font-family: Montserrat, sans-serif;
-  color: #d6d0c8;
-}
-
-h3 {
-  font-family: Montserrat, sans-serif;
-  color: #d6d0c8;
-}
-
-p {
-  font-family: Roboto, sans-serif;
-  color: #d6d0c8;
-}
-
-.hydralink {
-  text-decoration: underline;
-  color: #3e73e6;
-}
-
-.hydralink:hover {
-  color: #d6d0c8;
-}
-
-.h1-subtext {
-  text-align: center;
-  margin-bottom: 0;
-}
-
-.h1-subtext2 {
-  font-family: sans-serif;
-  color: #d6d0c8;
-  font-style: italic;
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  justify-content: center;
-  margin-top: 0;
 }
 
 .producer {
@@ -155,31 +166,6 @@ p {
   margin: 30px 40% 10px 0;
 }
 
-.profile-picture {
-  border-radius: 10px 10px 10px 10px;
-  max-width: 30%;
-  background-color: #373736;
-  margin: 20px;
-  border: 1px, solid #a27201;
-  border-radius: 10px;
-}
-
-.form__input {
-  display: block;
-  border: solid 1px #e6b33e;
-  border-radius: 5px;
-  padding: 1%;
-  background-color: #d6d0c8;
-  margin: auto auto 3% auto;
-  height: 50%;
-  width: 140%;
-}
-
-.content-wrap {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
 .heading-content {
   height: 130px;
   padding: 40px 40px 50px 40px;
@@ -194,23 +180,15 @@ p {
   column-gap: 30px;
 }
 
-.button1 {
-  padding: 8px;
-  border-radius: 5px;
-  background-color: #a27201;
-  font-family: sans-serif;
-  border: solid #a27201;
-  color: #d6d0c8;
-  text-decoration: none;
-  display: block;
-  text-align: center;
+.profile-button {
+  margin-right: 80%;
+  margin-top: 8%;
 }
 
-.button1:hover {
-  background-color: #373736;
-  border: solid #a27201;
-  border-radius: 5px;
-  text-decoration: none;
+/* Create an account */
+
+.h1-create-account {
+  margin-top: 5%;
 }
 
 .create-account-section {
@@ -220,11 +198,6 @@ p {
   background-color: #5d5d5c;
   min-width: 30%;
   margin-inline: 2%;
-}
-
-.profile-button {
-  margin-right: 80%;
-  margin-top: 8%;
 }
 
 .create-account-button {
@@ -252,6 +225,28 @@ p {
   align-items: baseline;
 }
 
+/* Create an account - forms */
+
+.h1-form {
+  font-size: 2em;
+}
+
+.grid-h1 {
+  grid-column: 1 / 3;
+  align-self: center;
+}
+
+.form__input {
+  display: block;
+  border: solid 1px #e6b33e;
+  border-radius: 5px;
+  padding: 1%;
+  background-color: #d6d0c8;
+  margin: auto auto 3% auto;
+  height: 50%;
+  width: 140%;
+}
+
 fieldset {
   border: solid 1px #a27201;
   border-radius: 10px;
@@ -266,15 +261,31 @@ fieldset {
   display: block;
 }
 
-.h1-form {
-  font-size: 2em;
-}
-
 label {
   font-size: 13px;
   font-family: Roboto, sans-serif;
   text-transform: uppercase;
   color: #d6d0c8;
+}
+
+.circle {
+  color: #a27201;
+  opacity: 0.5;
+  font-size: 1em;
+  padding: 6px;
+}
+
+.active-circle {
+  color: #a27201;
+  font-size: 1em;
+  padding: 6px;
+}
+
+.circle-section {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  margin: 3% 0 0 0;
 }
 
 .personal-information {
@@ -285,6 +296,19 @@ label {
   grid-template-rows: auto auto auto auto auto auto;
   padding: 2% 0;
   margin: 2% auto;
+}
+
+.newsletter {
+  background-color: #d6d0c8;
+  border: solid 1px #a27201;
+  border-radius: 2px;
+}
+
+.newsletter-section {
+  display: flex;
+  align-items: stretch;
+  width: 100%;
+  justify-content: center;
 }
 
 .banking-details {
@@ -309,43 +333,7 @@ label {
   grid-template-rows: auto auto auto auto auto auto;
 }
 
-.newsletter {
-  background-color: #d6d0c8;
-  border: solid 1px #a27201;
-  border-radius: 2px;
-}
-
-.newsletter-section {
-  display: flex;
-  align-items: stretch;
-  width: 100%;
-  justify-content: center;
-}
-
-.circle {
-  color: #a27201;
-  opacity: 0.5;
-  font-size: 1em;
-  padding: 6px;
-}
-
-.active-circle {
-  color: #a27201;
-  font-size: 1em;
-  padding: 6px;
-}
-
-.circle-section {
-  display: flex;
-  align-items: baseline;
-  justify-content: center;
-  margin: 3% 0 0 0;
-}
-
-.grid-h1 {
-  grid-column: 1 / 3;
-  align-self: center;
-}
+/* Successful member */
 
 .check-icon-big {
   font-size: 8em;
@@ -354,5 +342,36 @@ label {
 
 .success-section {
   border: solid #a27201 1px;
+  border-radius: 10px;
+  max-width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5% auto;
+  padding: 4%;
+}
+
+.h1-subtext {
+  text-align: center;
+  margin-bottom: 0;
+}
+.h1-subtext2 {
+  font-family: sans-serif;
+  color: #d6d0c8;
+  font-style: italic;
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: center;
+  margin-top: 0;
+}
+
+.profile-picture {
+  border-radius: 10px 10px 10px 10px;
+  max-width: 30%;
+  background-color: #373736;
+  margin: 20px;
+  border: 1px, solid #a27201;
   border-radius: 10px;
 }
