--- a/styles/films.css
+++ b/styles/films.css
@@ -143,7 +143,7 @@ body {
   display: flex;
   flex-flow: nowrap;
   justify-content: space-between;
-  margin-inline: auto;
+  align-items: center;
   margin-top: -16px;
 }
 
@@ -161,4 +161,8 @@ body {
 .new-releases {
   display: flex;
   margin: auto;
+}
+
+.films-grid {
+  display: grid;
 }
