--- a/styles/films.css
+++ b/styles/films.css
@@ -139,10 +139,9 @@ body {
 .drama,
 .documentary,
 .action {
-  width: 55%;
-  display: flex;
-  flex-flow: nowrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
+  column-gap: 10px;
   align-items: center;
   margin-top: -16px;
 }
