--- a/styles/styles.css
+++ b/styles/styles.css
@@ -374,13 +374,26 @@ label {
 }
 
 .profile-picture {
-  border-radius: 10px 10px 10px 10px;
   max-width: 300px;
   padding: 10px;
-  border: 1px, solid #a27201;
+  border: 1px solid #a27201;
   border-radius: 10px;
+}
+
+.producer-profile-section {
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  align-items: center;
 }
 
 .film-big {
   max-width: 500px;
+}
+
+.film-section {
+  display: flex;
+  max-width: 80%;
+  flex-direction: column;
+  align-items: center;
 }
