--- a/styles/styles.css
+++ b/styles/styles.css
@@ -396,4 +396,6 @@ label {
   max-width: 80%;
   flex-direction: column;
   align-items: center;
+  border: solid 1px #a27201;
+  border-radius: 10px;
 }
