--- a/styles/styles.css
+++ b/styles/styles.css
@@ -369,12 +369,11 @@ label {
 
 .producer-profile-grid {
   display: grid;
-  grid-template-columns: 1fr;
-  justify-content: center;
+  row-gap: 20px;
 }
 
 .profile-picture {
-  max-width: 300px;
+  max-width: 200px;
   padding: 10px;
   border: 1px solid #a27201;
   border-radius: 10px;
@@ -382,20 +381,20 @@ label {
 
 .producer-section {
   display: flex;
-  width: 50%;
+  width: 500px;
   flex-direction: column;
   align-items: center;
+  margin: auto;
 }
 
 .film-big {
-  max-width: 500px;
+  max-width: 700px;
 }
 
 .film-section {
-  display: flex;
-  max-width: 80%;
-  flex-direction: column;
-  align-items: center;
+  max-width: 700px;
   border: solid 1px #a27201;
   border-radius: 10px;
+  padding: 20px;
+  margin: auto;
 }
