--- a/styles/styles.css
+++ b/styles/styles.css
@@ -367,6 +367,8 @@ label {
   margin-top: 0;
 }
 
+/* Producer profile */
+
 .producer-profile-grid {
   display: grid;
   row-gap: 20px;
@@ -389,6 +391,7 @@ label {
 
 .film-big {
   max-width: 700px;
+  position: relative;
 }
 
 .film-section {
@@ -397,4 +400,9 @@ label {
   border-radius: 10px;
   padding: 20px;
   margin: auto;
+}
+
+.play-icon {
+  position: absolute;
+  font-size: 50px;
 }
