--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,6 +116,7 @@ header .logo2 {
   background-color: #1b1b1b;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 nav li {
@@ -404,5 +405,12 @@ label {
 
 .play-icon {
   position: absolute;
-  font-size: 50px;
+  font-size: 100px;
+  margin-top: -250px;
+  margin-left: 320px;
+  opacity: 0.7;
+}
+
+.play-icon :hover {
+  opacity: 1;
 }
