--- a/styles/pop-up.css
+++ b/styles/pop-up.css
@@ -30,9 +30,9 @@ button {
   border-radius: 0 5px 5px 0;
 }
 
-.fas {
+.back-icon {
   color: #d6d0c8;
-  size: 2em;
+  size: 30px;
 }
 
 .popup-section {
