--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,6 +82,7 @@ p {
   font-weight: 100;
   margin: 20px;
   min-width: 150px;
+  max-width: 180px;
 }
 
 .button2:hover {
@@ -426,7 +427,6 @@ label {
   border-radius: 10px;
   padding: 20px;
   margin: auto;
-  min-width: 500px;
 }
 
 .play-icon {
@@ -449,4 +449,11 @@ label {
 
 .manage-buttons {
   position: fixed;
+}
+
+.manage-film-section {
+  min-width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
