--- a/styles/index.css
+++ b/styles/index.css
@@ -68,16 +68,15 @@ main {
 footer {
   background-color: #1b1b1b;
   width: 100%;
-  color: #d6d0c8;
+  height: 50px;
 }
 
 footer .logo2 {
   height: 50px;
-  float: left;
 }
 
 footer .fas {
-  float: right;
+  font-size: 45px;
 }
 
 footer ul {
@@ -86,7 +85,7 @@ footer ul {
   align-items: center;
 }
 
-footer li {
+footer a {
   text-decoration: none;
   color: #d6d0c8;
 }
