--- a/styles/styles.css
+++ b/styles/styles.css
@@ -185,6 +185,44 @@ nav a:hover {
   font-size: 1.5em;
 }
 
+/* Footer */
+
+footer {
+  background-color: #1b1b1b;
+  width: 100%;
+  bottom: 0;
+}
+
+.footer-grid {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .logo2 {
+  height: 46px;
+  padding: 10px;
+}
+
+footer .fas {
+  font-size: 22px;
+}
+
+.footer-nav {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 30px;
+  font-size: 12px;
+  font-family: roboto, sans-serif;
+  text-transform: uppercase;
+}
+
+footer a {
+  text-decoration: none;
+  color: #d6d0c8;
+}
+
 /* Producers */
 
 .h1-producers {
@@ -482,4 +520,19 @@ label {
 .upload-profile-picture-button {
   position: absolute;
   margin-top: 80px;
+}
+
+.search-input {
+  border: solid 1px #a27201;
+  border-radius: 5px 0 0 5px;
+  padding: 3%;
+  padding-right: 20%;
+}
+
+button {
+  color: #d6d0c8;
+  text-decoration: none;
+  background-color: #a27201;
+  border: solid 1px #a27201;
+  border-radius: 0 5px 5px 0;
 }
