--- a/styles/films.css
+++ b/styles/films.css
@@ -188,6 +188,11 @@ body {
   margin-top: -16px;
 }
 
+.film-label {
+  grid-column: 5;
+  grid-row: 2;
+}
+
 .action-section {
   margin-bottom: 6%;
 }
