--- a/styles/films.css
+++ b/styles/films.css
@@ -188,6 +188,23 @@ body {
   margin-top: -16px;
 }
 
+.label1 {
+  grid-column: 2;
+  grid-row: 2;
+}
+.label2 {
+  grid-column: 3;
+  grid-row: 2;
+}
+.label3 {
+  grid-column: 4;
+  grid-row: 2;
+}
+.label4 {
+  grid-column: 5;
+  grid-row: 2;
+}
+
 .action-section {
   margin-bottom: 6%;
 }
