--- a/styles/films.css
+++ b/styles/films.css
@@ -205,7 +205,7 @@ body {
   grid-row: 2;
 }
 
-a .label1 .label2 .label3 .label4 {
+a .drama {
   font-family: roboto, sans-serif;
   color: #d6d0c8;
   text-decoration: none;
