--- a/styles/films.css
+++ b/styles/films.css
@@ -205,8 +205,7 @@ body {
   grid-row: 2;
 }
 
-.drama a,
-.documentary a.action a {
+.drama a .documentary a .action a {
   font-family: roboto, sans-serif;
   color: #d6d0c8;
   text-decoration: none;
