--- a/styles/films.css
+++ b/styles/films.css
@@ -210,7 +210,7 @@ body {
   color: #d6d0c8;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 1em;
+  font-size: 14px;
 }
 
 .action-section {
