--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,13 +105,6 @@ header {
   padding: 0px;
 }
 
-header .right-nav {
-  color: #d6d0c8;
-  font-size: 1em;
-  float: right;
-  margin: 0;
-}
-
 header .logo {
   max-height: 100px;
   margin-top: 0;
@@ -137,12 +130,22 @@ header .logo2 {
 
 /* Navigation */
 
+header .right-nav {
+  color: #d6d0c8;
+  font-size: 1em;
+  float: right;
+  font-size: 20px;
+  font-family: roboto, sans-serif;
+}
+
 .navbar {
   overflow: hidden;
   background-color: #1b1b1b;
   position: sticky;
   top: 0;
   z-index: 1;
+  font-family: roboto, sans-serif;
+  font-size: 20px;
 }
 
 nav li {
