--- a/styles/films.css
+++ b/styles/films.css
@@ -26,7 +26,7 @@ header .logo {
   position: sticky;
   top: 0;
   z-index: 1;
-  font-family: roboto sans-serif;
+  font-family: roboto, sans-serif;
   font-size: 20px;
 }
 
