--- a/styles/styles.css
+++ b/styles/styles.css
@@ -526,12 +526,25 @@ label {
 .search-input {
   border: solid 1px #a27201;
   border-radius: 5px 0 0 5px;
+  height: 40px;
+  width: 250px;
+  background-color: #d6d0c8;
 }
 
-button {
+.search-button {
   color: #d6d0c8;
   text-decoration: none;
   background-color: #a27201;
   border: solid 1px #a27201;
   border-radius: 0 5px 5px 0;
+  width: 80px;
+}
+
+.search-icon {
+  font-size: 28px;
+}
+
+.form-section {
+  display: flex;
+  justify-content: center;
 }
