--- a/styles/styles.css
+++ b/styles/styles.css
@@ -545,3 +545,15 @@ label {
   display: flex;
   justify-content: center;
 }
+
+.profile-picture-watcher {
+  width: 40%;
+}
+
+.watcher-profile-grid {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  border: solid 1px;
+  border-radius: 10px;
+  align-items: center;
+}
