--- a/styles/styles.css
+++ b/styles/styles.css
@@ -557,3 +557,13 @@ label {
   border-radius: 10px;
   align-items: center;
 }
+
+.watcher-profile-grid h2 {
+  font-size: 1.3em;
+  margin: 0;
+}
+
+.watcher-profile-grid p {
+  opacity: 0.7;
+  margin-top: 0;
+}
