--- a/styles/index.css
+++ b/styles/index.css
@@ -12,6 +12,10 @@ header .logo {
   float: left;
 }
 
+header .right-nav {
+  display: none;
+}
+
 body {
   font-family: Montserrat, Helvetica, sans-serif;
   margin: 0;
@@ -194,6 +198,7 @@ p {
     float: right;
     font-size: 20px;
     font-family: roboto, sans-serif;
+    display: block;
   }
 
   nav li {
