--- a/styles/styles.css
+++ b/styles/styles.css
@@ -316,7 +316,6 @@ footer a {
 }
 
 .grid-h1 {
-  grid-column: 1 / 3;
   align-self: center;
 }
 
@@ -372,7 +371,7 @@ label {
 }
 
 .personal-information {
-  min-width: 200px;
+  min-width: 250px;
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;
@@ -395,13 +394,13 @@ label {
 }
 
 .banking-details {
-  width: 50%;
+  min-width: 250px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto;
   justify-items: center;
   grid-auto-flow: column;
-  grid-template-rows: auto auto auto auto auto;
-  padding: 2% 3% 2% 0;
+  grid-template-rows: auto auto auto auto auto auto auto auto auto;
+  padding: 4%;
   margin: 2% auto;
 }
 
@@ -591,4 +590,15 @@ label {
     width: 35%;
     margin: 2% auto;
   }
+
+  .grid-h1 {
+    grid-column: 1 / 3;
+  }
+}
+
+.banking-details {
+  width: 50%;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto;
+  padding: 2% 3% 2% 0;
 }
