--- a/styles/styles.css
+++ b/styles/styles.css
@@ -405,13 +405,13 @@ label {
 }
 
 .credit-card {
-  width: 45%;
+  width: 250px;
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;
   grid-auto-flow: column;
   padding: 2% 0;
-  margin: 2% auto;
+  margin: 4%;
   grid-template-rows: auto auto auto auto auto auto;
 }
 
@@ -602,4 +602,8 @@ label {
     grid-template-rows: auto auto auto auto auto;
     padding: 2% 3% 2% 0;
   }
+
+  .credit-card {
+    width: 45%;
+    margin: 2% auto;
 }
