--- a/styles/styles.css
+++ b/styles/styles.css
@@ -429,12 +429,12 @@ label {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 4%;
+  margin: 10% 4%;
   padding: 4%;
 }
 
 .success-section h1 {
-  font-size: 1em;
+  font-size: 2em;
 }
 
 .h1-subtext {
