--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,11 +82,12 @@ p {
   display: flex;
   background-color: #5d5d5c;
   font-family: roboto, sans-serif;
-  font-size: 1em;
+  font-size: 1.4em;
   font-weight: 100;
-  margin: 20px;
+  margin: 10px auto;
   min-width: 150px;
-  max-width: 180px;
+  max-width: 300px;
+  height: 30px;
 }
 
 .button2:hover {
@@ -511,10 +512,6 @@ label {
   margin: 0 5px 0 2px;
 }
 
-.manage-buttons {
-  position: fixed;
-}
-
 .manage-film-section {
   min-width: 500px;
   display: flex;
@@ -605,10 +602,23 @@ label {
 
   .producer-section {
     width: 500px;
+    margin-top: 50px;
   }
 
   .film-big {
     max-width: 700px;
+  }
+
+  .button2 {
+    font-size: 1em;
+    margin: 20px;
+    min-width: 150px;
+    max-width: 180px;
+    height: 20px;
+  }
+
+  .manage-buttons {
+    position: fixed;
   }
 }
 @media (min-width: 1000px) {
