--- a/styles/styles.css
+++ b/styles/styles.css
@@ -521,7 +521,7 @@ label {
 }
 
 .manage-film-section {
-  min-width: 500px;
+  min-width: 98%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -627,6 +627,10 @@ label {
   .upload-profile-picture-button {
     position: absolute;
     margin-top: 80px;
+  }
+
+  .manage-film-section {
+    min-width: 500px;
   }
 }
 @media (min-width: 1000px) {
