--- a/styles/styles.css
+++ b/styles/styles.css
@@ -336,6 +336,7 @@ footer a {
   border-radius: 5px;
   padding: 1%;
   background-color: #d6d0c8;
+  width: 80%;
 }
 
 fieldset {
@@ -495,11 +496,11 @@ label {
 }
 
 .film-section {
-  max-width: 700px;
+  max-width: 90%;
   border: solid 1px #a27201;
   border-radius: 10px;
   padding: 20px;
-  margin: auto;
+  margin: 4%;
 }
 
 .play-icon {
@@ -631,6 +632,11 @@ label {
 
   .manage-film-section {
     min-width: 500px;
+  }
+
+  .film-section {
+    max-width: 700px;
+    margin: auto;
   }
 }
 @media (min-width: 1000px) {
