--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,11 +49,6 @@ p {
   color: #d6d0c8;
 }
 
-.content-wrap {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
 .button1 {
   padding: 8px;
   border-radius: 5px;
@@ -336,7 +331,7 @@ footer a {
   border-radius: 5px;
   padding: 1%;
   background-color: #d6d0c8;
-  width: 80%;
+  width: 95%%;
 }
 
 fieldset {
@@ -637,6 +632,11 @@ label {
   .film-section {
     max-width: 700px;
     margin: auto;
+  }
+
+  .content-wrap {
+    max-width: 1200px;
+    margin: 0 auto;
   }
 }
 @media (min-width: 1000px) {
