--- a/styles/styles.css
+++ b/styles/styles.css
@@ -472,8 +472,7 @@ label {
   min-width: 250px;
   flex-direction: column;
   align-items: center;
-  margin: auto;
-  margin-top: 50px;
+  margin: 4%;
 }
 
 .producer-section h1 {
@@ -496,8 +495,8 @@ label {
 .play-icon {
   position: absolute;
   font-size: 100px;
-  margin-top: -250px;
-  margin-left: 320px;
+  margin-top: -35%;
+  margin-left: 30%;
   opacity: 0.7;
 }
 
@@ -600,7 +599,7 @@ label {
 
   .producer-section {
     width: 500px;
-    margin-top: 50px;
+    margin: 50px auto auto auto;
   }
 
   .film-big {
@@ -658,6 +657,13 @@ label {
   .profile-button {
     margin: 8% 0 0 0;
 }
+
+.play-icon {
+  margin-top: -250px;
+  margin-left: 320px;
+}
+
+
 @media (min-width: 1000px) {
   .grid-h1 {
     grid-column: 1 / 3;
