--- a/styles/pop-up.css
+++ b/styles/pop-up.css
@@ -22,12 +22,13 @@ p {
   margin: 1%;
 }
 
-button {
+.search-button {
   color: #d6d0c8;
   text-decoration: none;
   background-color: #a27201;
   border: solid 1px #a27201;
   border-radius: 0 5px 5px 0;
+  width: 70px;
 }
 
 .back-icon {
@@ -50,7 +51,7 @@ button {
   border: solid 1px #a27201;
   border-radius: 5px 0 0 5px;
   padding: 3%;
-  padding-right: 20%;
+  width: 200px;
 }
 
 .login-input {
