--- a/styles/films.css
+++ b/styles/films.css
@@ -157,24 +157,10 @@ body {
   column-gap: 10px;
   align-items: center;
   margin-top: -16px;
+  width: 100%;
 }
 
-.label1 {
-  grid-column: 2;
-  grid-row: 2;
-}
-.label2 {
-  grid-column: 3;
-  grid-row: 2;
-}
-.label3 {
-  grid-column: 4;
-  grid-row: 2;
-}
-.label4 {
-  grid-column: 5;
-  grid-row: 2;
-}
+
 
 .films-grid a {
   font-family: roboto, sans-serif;
@@ -249,6 +235,30 @@ a:hover {
   .film-big {
     max-width: 500px;
   }
+
+  .drama,
+.documentary,
+.action {
+  width: auto;
+}
+  
+.label1 {
+  grid-column: 2;
+  grid-row: 2;
+}
+.label2 {
+  grid-column: 3;
+  grid-row: 2;
+}
+.label3 {
+  grid-column: 4;
+  grid-row: 2;
+}
+.label4 {
+  grid-column: 5;
+  grid-row: 2;
+}
+}
 }
 
 @media (min-width: 900px) {
