--- a/styles/films.css
+++ b/styles/films.css
@@ -136,7 +136,7 @@ p {
 }
 
 .film {
-  max-width: 150px;
+  max-width: 100%;
   border-width: 50px;
 }
 
@@ -229,34 +229,37 @@ a:hover {
     display: block;
   }
 
+  .film {
+    max-width: 150px;
+  }
+
   .film-big {
     max-width: 500px;
   }
 
   .drama,
-.documentary,
-.action {
-  width: auto;
-  grid-template-columns: auto auto auto auto auto auto;
-}
-  
-.label1 {
-  grid-column: 2;
-  grid-row: 2;
-}
-.label2 {
-  grid-column: 3;
-  grid-row: 2;
-}
-.label3 {
-  grid-column: 4;
-  grid-row: 2;
-}
-.label4 {
-  grid-column: 5;
-  grid-row: 2;
-}
-}
+  .documentary,
+  .action {
+    width: auto;
+    grid-template-columns: auto auto auto auto auto auto;
+  }
+
+  .label1 {
+    grid-column: 2;
+    grid-row: 2;
+  }
+  .label2 {
+    grid-column: 3;
+    grid-row: 2;
+  }
+  .label3 {
+    grid-column: 4;
+    grid-row: 2;
+  }
+  .label4 {
+    grid-column: 5;
+    grid-row: 2;
+  }
 }
 
 @media (min-width: 900px) {
