--- a/styles/index.css
+++ b/styles/index.css
@@ -55,6 +55,13 @@ footer .fas {
   margin-top: 0px;
 }
 
+h2,
+h3,
+h4 {
+  font-family: Montserrat, sans-serif;
+  font-size: 1.4em;
+}
+
 h1 {
   font-family: Montserrat, Helvetica, sans-serif;
   color: #a27201;
@@ -64,7 +71,6 @@ h1 {
 }
 
 h2 {
-  font-family: Montserrat, sans-serif;
   color: #e6b33e;
   font-size: 2em;
   margin-top: 0;
@@ -72,14 +78,12 @@ h2 {
 }
 
 h3 {
-  font-family: Montserrat, sans-serif;
   color: #a27201;
   font-size: 2em;
   margin-left: 15%;
 }
 
 h4 {
-  font-family: Montserrat, sans-serif;
   color: #e6b33e;
   font-size: 2em;
   margin-left: 35%;
@@ -249,6 +253,12 @@ nav a:hover {
   .content-wrap {
     max-width: 1200px;
     margin: 0 auto;
+  }
+
+  h2,
+  h3,
+  h4 {
+    font-size: 2em;
   }
 
   .index-section2 {
