--- a/styles/pop-up.css
+++ b/styles/pop-up.css
@@ -107,6 +107,31 @@ label {
   font-size: 20px;
 }
 
+.film-big {
+  max-width: 100%;
+  position: relative;
+}
+
+.film-section {
+  max-width: 90%;
+  border: solid 1px #a27201;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 4%;
+}
+
+.play-icon {
+  position: absolute;
+  font-size: 100px;
+  margin-top: -35%;
+  margin-left: 30%;
+  opacity: 0.7;
+}
+
+.play-icon :hover {
+  opacity: 1;
+}
+
 @media (min-width: 900px) {
   h1 {
     font-size: 3em;
@@ -119,5 +144,15 @@ label {
 
   .search-icon {
     font-size: 28px;
+  }
+
+  .film-section {
+    max-width: 700px;
+    margin: auto;
+  }
+
+  .play-icon {
+    margin-top: -250px;
+    margin-left: 320px;
   }
 }
